--- a/Components/footer/footer.module.css
+++ b/Components/footer/footer.module.css
@@ -1,6 +1,4 @@
 .footerContainer {
-  position: absolute;
-  bottom: 0;
 }
 .footerList {
   display: inline;
